<resources>
    <string name="google_maps_api">AIzaSyCFoUL8k-y1iFg1sNlS68MuWAz0lH7oDIY</string>
    <string name="app_name">HealthCareApplicationFinalProject</string>
    <string name="lifePluse">LifePluses</string>
    <string name="login">Login</string>
    <string name="newAccount">Register for New account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="conPassword">Confirm Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="HadAccount">Already have an account ?</string>
    <string name="Call">EMagency Call</string>
    <string name="location">Location</string>
    <string name="enter_user_name">Enter your username</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="doc_info">Doctor Info</string>


    <string name="title_activity_blood_donation">BloodDonation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="Package_name">Packages Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="back">Back</string>
    <string name="total_cost">Total cost</string>

    <!--lab_test-->
    <string name="select_the_packages">Select the packages</string>
    <string name="checkout">CheckOut</string>

    <!--Blood Request-->
    <string name="request_blood">Request Blood</string>
    <string name="blood_type">Blood Type</string>
    <string name="gender">Gender</string>
    <string name="near_hospital">Near Hospital</string>
    <string name="phone_number">Phone Number</string>
    <string name="request">Request</string>

    <!--Book  Appointment-->
    <string name="appointment">Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="fees">Fees</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="date">01/4/2024</string>
    <string name="time">11.00</string>

    <!--Cart Lab-->
    <string name="select_package">Lab Test Added Packages</string>
    <string name="total_costs">Total Cost :1298/=</string>

    <!--Dashboard-->
    <string name="city">City</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="lab_test">Lab Order Details</string>
    <string name="health_tips">Health Tips</string>
    <string name="order_details">Order Details</string>
    <string name="logout">Logout</string>

    <!--Dashboard-->
    <string name="default_title">Default Title</string>

    <!--find Doctor-->
    <string name="specialList_Doctor">SpecialList  Doctors</string>
    <string name="FamilyPhysician">Family Doctor</string>
    <string name="Dietician">Dietician</string>
    <string name="Dentist">Dentist</string>
    <string name="Surgeon">Surgeon</string>
    <string name="Cardiologists">Cardiologists</string>
    <string name="neurologist">Neurologist</string>

    <!--Order Details-->
    <string name="details_of_orders">Details of Orders</string>
    <string name="registered_user">Registered User</string>
    <string name="confirm">Confirm</string>

    <!-- Doctor Info-->
    <string name="doctor_name">Doctor Name</string>
    <string name="locationDoc">Location</string>
    <string name="Exp">Experience</string>
    <string name="fee">Fees</string>
    <string name="DoctorSubmit">Doctor Submit</string>



    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="back1">BACK</string>
    <string name="health_articles_">Health Articles</string>
    <string name="todo_">TODO</string>
    <string name="lab_order_details_">Lab Order Details</string>
    <string name="order_details_">Order Details</string>
    <string name="back_">Back</string>
    <string name="address_">Address</string>
    <string name="fill_deatils_for_lab_booking_">Fill Deatils for Lab booking</string>
    <string name="full_name_">Full Name</string>
    <string name="contact_number_">Contact Number</string>
    <string name="pin_code_">Pin Code</string>
    <string name="book_">Book</string>
    <string name="back2">BACK</string>
    <string name="todo__">TODO</string>
    <string name="_todo">TODO</string>
    <string name="todo___">TODO</string>
    <string name="todo____">TODO</string>
    <string name="todo_____">TODO</string>
    <string name="doctor_updated_">Doctor updated</string>
    <string name="__todo">TODO</string>
    <string name="user_details_">User Details</string>
    <string name="__back">Back</string>
    <string name="blood_request_details_">Blood Request Details</string>
    <string name="back3">Back</string>


    <string-array name="doctor_categories">
        <item>Select the Doctor Type</item>
        <item>Family Docters</item>
        <item>Dietician</item>
        <item>Dentist</item>
        <item>Surgeon</item>
        <item>Cardiologist</item>
        <item>Neurologist</item>
    </string-array>

    <string-array name="blood_type">
        <item>Select the blood Type</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>




</resources>