<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordActivity">


    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_design" />

    <TextView
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="136dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="131dp"
        android:text="@string/lifePluse"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="148dp"
        android:text="@string/enter_user_name"
        android:textColor="@color/bLack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameReset"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Text1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/reset"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/usernameReset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/btn1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>