<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/background_design" />

    <TextView
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="61dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/usernameReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Reset"
        android:layout_marginTop="73dp"
        android:layout_marginStart="35dp"
        android:textColor="@color/bLack"
        android:textSize="30sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/passwordReset"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/usernameReset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/security"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/ReConfirmResetPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_below="@+id/passwordReset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/security"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/conPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_below="@id/ReConfirmResetPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn1"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <Button
        android:id="@+id/ResetBack"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_below="@id/ResetButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/btn1"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>